Grace/tests/gibbs/errors/t042.grace
// ERROR = P1031
method foo(a)bar(b,*) {
    print(a)
    print(b)
}
